# autolayout-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  compile_commands.json
app/: test_autolayout.cpp
autolayout/: constraint.h  point.h  rectangle.h  size.h  view.cpp  view.h
src/: constraint.h  point.h  rectangle.h  size.h  view.cpp  view.h
